# src/api/dto/user.go
@@ -1,0 +1,5 @@
+package dto
+
+type GetUserRequest struct {
+	MobileNumber string `json:"mobile_number" binding:"required,mobile,min=11,max=11"`
+}
