# src/docs/swagger.yaml
@@ -1,5 +1,14 @@
 basePath: /api/
 definitions:
+  dto.GetUserRequest:
+    properties:
+      mobile_number:
+        maxLength: 11
+        minLength: 11
+        type: string
+    required:
+      - mobile_number
+    type: object
   handlers.personData:
     properties:
       first_name:
@@ -177,6 +186,36 @@ paths:
       summary: UserById
       tags:
       - Test
+  /v1/users/send-otp/:
+    post:
+      consumes:
+        - application/json
+      description: Send OTP to user
+      parameters:
+        - description: User details for OTP
+          in: body
+          name: request
+          required: true
+          schema:
+            $ref: '#/definitions/dto.GetUserRequest'
+      produces:
+        - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/helper.BaseHttpResponse'
+      summary: Send OTP
+      tags:
+        - User
 schemes:
 - http
 securityDefinitions:
